--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 255, 255;
+  --background-rgb: 219, 234, 254; /* #dbeafe */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,6 +14,10 @@
   }
 }
 
+* {
+  cursor: none;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -21,7 +25,7 @@ body {
   flex-direction: column;
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-rgb));
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #searchbar ul li:not(:last-child) {
