--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,17 @@ body {
   /* overflow: hidden; */
 }
 
+/* clears the 'X' from Internet Explorer */
+input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
+
+/* clears the 'X' from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+
 #searchbar ul li:not(:last-child) {
   border-bottom: 1px solid rgb(209, 213, 219); /* border-gray-300 */
 }
